CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (web)

SET (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

# Force C++11 mode.
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -std=c++11")

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (examples)

ENABLE_TESTING ()
ADD_SUBDIRECTORY (tests)
